@@ -1,3 +1,10 @@
+2004-09-25  ujwal
+	
+	* Fixed problem when PTYSession: -keyDown is never called when numeric or function 
+	  keys were pressed. This messes up switching between application and numeric 
+	  keypad modes. Now PTYTextView: -keyDown: invokes PTYSession: -keyDown: when 
+	  numeric or function keys are pressed.
+
 2004-09-12  fabian
 	
 	* More fix for "Font Size Follows Window Resize" option. Largely works now,
